# py-modelrunner

./: .gitignore  .isort.cfg  .project  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements.txt  requirements_full.txt  setup.py
.github/workflows/: build.yml  check_docs.yml  coverage_report.yml  release_pip.yml
docs/: requirements.txt
docs/source/: .gitignore  conf.py  examples.rst  index.rst  installation.rst  parse_examples.py  run_autodoc.py  sphinx_simplify_typehints.py  structure.rst  user_manual.rst
examples/: io_hdf.py  io_json.py  io_yaml.py  minimal.py  model_class.py  model_decorator.py  model_function.py  model_storage_output.py  read_many.py  script_custom_func.py  script_function.py  script_many_classes.py  script_minimal.py  script_model_class.py  submit_function.py  submit_many.py  submit_many_func.py  submit_many_iter.py  submit_one.py  submit_shebang.py
job/: __init__.py  __main__.py  model.py  parameters.py  results.py
job/run/: __init__.py  __main__.py  job.py
job/run/templates/: background.template  foreground.template  local.template  qsub.template
job/run/tests/: test_job.py
job/tests/: test_examples.py  test_model.py  test_parameters.py  test_results.py
job/tests/scripts/: make_model.py  make_model_class.py
model/: __init__.py  __main__.py  model.py  parameters.py  results.py
model/cluster/: __init__.py  __main__.py  job.py
model/cluster/templates/: qsub.template
model/hpc/: __main__.py  job.py
model/hpc/templates/: local.template
modelrunner/: __init__.py  __main__.py  compatibility.py  config.py  io.py  model.py  parameters.py  results.py  state.py  trajectory.py  utils.py  version.py
modelrunner/_compatibility/: __init__.py  triage.py  version0.py  version1.py
modelrunner/compatibility/: triage.py  version0.py  version1.py
modelrunner/model/: __init__.py  base.py  factory.py  parameters.py
modelrunner/run/: __init__.py  __main__.py  job.py  launch.py  results.py
modelrunner/run/compatibility/: __init__.py  triage.py  version0.py  version1.py  version2.py
modelrunner/run/templates/: background.jinja  background.template  foreground.jinja  foreground.template  qsub.jinja  qsub.template  srun.jinja  srun.template
modelrunner/run/tests/: test_job.py
modelrunner/run/tests/scripts/: script.py
modelrunner/state/: __init__.py  array.py  array_collection.py  base.py  dict.py  io.py  object.py  trajectory.py
modelrunner/storage/: __init__.py  access.py  access_modes.py  attributes.py  base.py  group.py  tools.py  trajectory.py  utils.py
modelrunner/storage/backend/: __init__.py  hdf.py  json.py  memory.py  text.py  text_base.py  utils.py  yaml.py  zarr.py
modelrunner/tests/: test_io.py  test_main.py  test_model.py  test_parameters.py  test_results.py  test_state.py  test_trajectory.py
modelrunner/tests/scripts/: function.py  function_main.py  make_model.py  make_model_class.py  make_model_marked.py
scripts/: create_compatibility_files.py  create_test_files.py  format_code.sh  performance_hdf5_zarr.py  run_tests.py  tests_debug.sh  write_test_files.py
tests/: conftest.py  format_code.sh  mypy.ini  requirements.txt  run_tests.py  test_config.py  test_examples.py  test_main.py  test_model.py  test_parameters.py  test_results.py  test_state.py  test_trajectory.py  test_version.py  tests_coverage.sh  tests_parallel.sh  tests_run.sh  tests_types.sh
tests/compatibility/: test_compatibility.py
tests/compatibility/0/: result.hdf  result.json  result.yaml
tests/compatibility/1/: array.hdf  array.json  array.pkl  array.yaml  array.zarr  array_col.json  array_col.pkl  array_col.yaml  array_col.zarr  dict.json  dict.pkl  dict.yaml  dict.zarr  object.hdf  object.json  object.pkl  object.yaml  object.zarr  result.hdf  result.json  result.yaml
tests/compatibility/2/: array.hdf  array.json  array.pkl  array.yaml  array_col.hdf  array_col.json  array_col.yaml  dict.hdf  dict.json  dict.pkl  dict.yaml  nested.hdf  nested.json  nested.pkl  nested.yaml  object.hdf  object.json  object.yaml
tests/compatibility/3/: array.hdf  array.json  array.pkl  array.yaml  array_col.hdf  array_col.json  array_col.yaml  dict.hdf  dict.json  dict.yaml  model_array.hdf  model_array.json  model_array.yaml  model_array_col.hdf  model_array_col.json  model_array_col.pkl  model_array_col.yaml  model_dict.hdf  model_dict.json  model_dict.yaml  model_nested.hdf  model_nested.json  model_nested.pkl  model_nested.yaml  nested.hdf  nested.json  nested.yaml
tests/helpers/: __init__.py  asserts.py  states.py  storage.py
tests/model/: test_model.py  test_parameters.py
tests/model/scripts/: function.py  function_main.py  function_marked.py  make_model.py  make_model_class.py  make_model_marked.py
tests/run/: test_job.py  test_results.py  test_run_main.py
tests/run/scripts/: custom.jinja  fail.py  function.py  print.py
tests/scripts/: function_main.py  function_marked.py  make_model.py
tests/state/: test_dict.py  test_generic.py  test_state.py  test_trajectory.py
tests/storage/: test_group.py  test_register_action.py  test_storage.py  test_storage_generic.py  test_storage_special.py  test_trajectory.py  test_utils.py
tests/utils/: states.py
